apps/20-media/sonarr/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/managed-by: kustomize
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        vixens.io/sizing.sonarr: V-medium
        vixens.io/backup-profile: "relaxed"
      annotations:
        reloader.stakater.com/auto: "true"
        vixens.io/fast-start: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
        vixens.io/no-long-connections: "true"
    spec:
      priorityClassName: vixens-medium
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      initContainers: []
      containers:
        - name: sonarr
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 2Gi
          image: ghcr.io/hotio/sonarr:release
          ports:
            - containerPort: 8989 # Default Sonarr UI port
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 15
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["SETGID", "SETUID", "CHOWN", "DAC_OVERRIDE"]
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: tv
              mountPath: /tv
              subPath: series
      volumes:
        - name: config
          emptyDir: {}
        - name: downloads
          nfs:
            server: nas.truxonline.com
            path: /mnt/tank/scratch/downloads
        - name: tv
          nfs:
            server: nas.truxonline.com
            path: /mnt/tank/data/media
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
