apps/20-media/sonarr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: 8989
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
