apps/20-media/sonarr/base/cilium-networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
